Thu Apr 13 18:35:15 2000  Lars Wirzenius  <liw@wapit.com>

	* Making release 0.7.1.

Thu Apr 13 17:14:40 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/bearerbox.c: Commented out extraneous debugging message.
	
	* gw/wsp.c: Function transaction_belongs_to_session: Check that
	neither machine is unused.
	
	* test/fakesmsc.c: Always try reading at least once, even if
	timeout has already occured. This helps in high-load situations.
	
	* test/fakewap.c: Print "finished session" messages even if
	interval is very small.

2000-04-13  Richard Braakman  <dark@wapit.com>

	* gw/smsc_cimd.c: Fixed message text loading for messages with both
	UDH and normal text.

2000-04-13    <Kalle Marjola <rpr@wapit.com>>

	* gw/bearerbox.c: tried to fix saturation problem; failed but now
	works a bit better. Also added max-queue variable reading, it had
	been lost in some point. I will try to fix saturation later on

	* gw/smsbox.c: removed that thread-safe heartbeat thingy, it is of
	no use (sorry Liw :)

Wed Apr 12  2000  Derry Hamilton  <rasilon@tardis.ed.ac.uk

        * utils/start-stop-daemon.c: Implemented pid_is_user and pid_is_cmd
	for solaris.


2000-04-12  Tuomas Luttinen  <tuo@tuo.wapit.fi>

	* gwlib/octstr.[ch]: Function octstr_append_char added.

	* gw/wml_compiler.c: Attribute values are now searched for text
	that can be replaced with one byte value codes.

Wed Apr 12 00:30:54 2000  Lars Wirzenius  <liw@wapit.com>

	* test/fakewap.c, test/test_http.c, test/test_urltrans.c,
	utils/start-stop-daemon.c: Changed references to <getopt.h>
	to <unistd.h>, except in start-stop-daemon, where <getopt.h>
	is still needed because of getopt_long.
	
	Thanks to kean.leong.ang@my.arthurandersen.com for noticing
	this (and providing a patch, even though I did it slightly
	differently).

Tue Apr 11 21:57:17 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/bearerbox.c: Try harder to read from smsbox to avoid the
	problem of not noticing smsbox heartbeats when incoming traffic
	is too fast.
	